deploy/manifests/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: flask
  namespace: flask
spec:
  internalTrafficPolicy: Cluster
  ipFamilies:
    - IPv4
  ipFamilyPolicy: SingleStack
  ports:
    - name: flask
      port: 5000
      protocol: TCP
      targetPort: flask
  selector:
    app: flask
  sessionAffinity: None
  type: ClusterIP
status:
  loadBalancer: {}
